[package]
name = "chirpr"
version = "0.1.0"
authors = ["Han Hossain <ahanuf12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
async-std = { version = "1.9.0", features = ["attributes"] }
serde = { version = "1.0.123", features = ["derive"] }
sqlx = { version = "0.4.2", features = ["runtime-async-std-native-tls", "sqlite"] }
thiserror = "1.0.23"
tide = "0.16.0"
uuid = { version = "0.8.2", features = ["v4"] }
