[package]
name = "identity"
version = "0.1.0"
authors = ["Han Hossain <ahanuf12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.11.0"
serde = { version = "1.0.114", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
